# xtreamfilter

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  spinner_script.html
.github/workflows/: docker-publish.yml  test.yml
app/: database.py  dependencies.py  main.py  main_old.py  main_old2.py  migrate.py
app/models/: cart.py  category.py  config.py  monitor.py  xtream.py
app/routes/: __init__.py  browse_api.py  cache_api.py  cart_api.py  category_api.py  config_api.py  epg.py  filter_api.py  health.py  log_api.py  monitor_api.py  player_api.py  playlist.py  source_api.py  stream_proxy.py  ui.py  xtream_merged.py  xtream_source.py
app/services/: cache_service.py  cart_service.py  category_service.py  config_service.py  epg_service.py  filter_service.py  http_client.py  jellyfin_service.py  log_service.py  m3u_service.py  monitor_service.py  notification_service.py  stream_service.py  xtream_service.py
app/templates/: browse.html  cart.html  index.html  logs.html  monitor.html
scripts/: entrypoint.sh
test-install/: docker-compose.yml
tests/: conftest.py  test_cache_refresh.py  test_e2e.py  test_filters.py  test_log_routes.py  test_log_service.py  test_migration.py  test_monitor.py  test_monitor_edit_routes.py  test_movie_monitor.py  test_notification_service.py  test_routes.py
